v8/tests/messages/property-load-init.out
property-load-init.js:1: Uncaught TypeError: Cannot read property 'x' of null
null.x
    ^
